<resources>
    <string name="app_name">chat</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="cpe_hello">Hello World :D</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="logout">log Out</string>
    <string name="profileUsername">Change Username</string>
    <string name="change">Update Profile</string>
    <string name="send">Send</string>
    <string name="enter_message">Type your message here</string>

</resources>
