<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity"
    >


  <ImageView
      android:id="@+id/icon"
      android:layout_marginTop="15dp"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_gravity="center"
      android:contentDescription="icon"
      android:src="@drawable/img_chat" />

  <!-- Login progress -->
  <ProgressBar
      android:id="@+id/login_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:visibility="gone"
      style="?android:attr/progressBarStyleLarge"
      />


  <ScrollView
      android:id="@+id/login_form"
      android:layout_width="349dp"
      android:layout_height="352dp">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#000000" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:passwordToggleEnabled="true"
          app:passwordToggleTint="@color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:hint="@string/prompt_password"
            android:fontFamily="@font/montserrat"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#000000" />

      </android.support.design.widget.TextInputLayout>

      <LinearLayout
          android:layout_width="160dp"
          android:layout_height="150dp"
          android:layout_gravity="center"
          android:layout_marginTop="50dp"
          android:orientation="vertical">


        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/button_background"
            android:text="@string/action_sign_in"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <Button
            android:id="@+id/email_sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/action_sign_up"
            android:textColor="@color/orange"
            android:textStyle="bold" />

      </LinearLayout>


    </LinearLayout>
  </ScrollView>
</LinearLayout>